WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
75134
Fix mac build caused by improper include of "Locker.h"
https://bugs.webkit.org/show_bug.cgi?id=75134
Summary
Fix mac build caused by improper include of "Locker.h"
Chris Rogers
Reported
2011-12-22 15:11:25 PST
Fix mac build caused by improper include of "Locker.h"
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Rogers
Comment 1
2011-12-22 15:12:30 PST
Committed
r103585
: <
http://trac.webkit.org/changeset/103585
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug